--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,9 +1,11 @@
 html,body{
-  height:"100%";
+  height:100%;
+  width: 100%;
   text-align: center;
+  background-color: #B3CDE0;
 }
 .root{
-  height:"100%";
+  height:100%;
 }
 .listComponent{
   width: 400px;
