--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,6 +1,7 @@
 html,body{
   height:100%;
   width: 100%;
+  margin:0px;
   text-align: center;
   background-color: #B3CDE0;
 }
@@ -8,12 +9,13 @@ html,body{
   height:100%;
 }
 .listComponent{
-  width: 400px;
-  height: 300px;
+  width: 100%;
+  max-height: 300px;
   overflow-x: hidden; 
   overflow-y: auto; 
   text-align:justify; 
 }
+
 .teamList{
   max-height: 200px;
   overflow-y: auto; 
@@ -29,13 +31,14 @@ html,body{
 .boardLists{
   display: flex;
   flex-direction: row;
+  flex-wrap: wrap;
   justify-content: space-evenly;
 }
 .paperList{
   padding: 15px;
 }
 .appbar{
-  margin-bottom: 50px;
+  /* margin-bottom: 50px; */
 }
 .brandName{
   flex:1;
